--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.2'
 services:
   app:
     build: .
-    expose:
-      - 3000
+    # expose:
+    #   - 3000
     ports:
       - 8000:3000
     depends_on:
