--- a/package.json
+++ b/package.json
@@ -4,23 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha test/userRegister.test.js",
     "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^6.7.3",
     "express-validator": "^6.14.1",
     "jsonwebtoken": "^8.5.1",
-    "redis": "2.8.0",
-    "axios": "^1.3.4",
-    "cors": "^2.8.5",
+    "mongoose": "^6.7.3",
     "pino": "^8.11.0",
     "pino-http": "^8.3.3",
-    "pino-pretty": "^10.0.0"
+    "pino-pretty": "^10.0.0",
+    "redis": "2.8.0",
+    "supertest": "^6.3.3"
+  },
+  "devDependencies": {
+    "chai": "*",
+    "mocha": "*"
   }
 }
